# AnalystTask

Task2/: .gitignore  CMakeLists.txt  analyst.cpp  analyst.h  main.cpp
